--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.2.1",
+    "axios": "^1.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "redux-logger": "^3.0.6",
+    "remote-redux-devtools": "^0.5.16",
     "vite": "^4.1.0"
   }
 }
